# ika_ws

./: .gitignore  README.md  map.pgm  map.yaml
src/ika_controller/: README.md  USAGE.md  package.xml  setup.cfg  setup.py
src/ika_controller/config/: controllers.yaml  ekf.yaml
src/ika_controller/ika_controller/: ika_bridge.py  ika_controller.py  ika_odom.py  lidar_centering.py  rover_teleop.py
src/ika_controller/launch/: controller.launch.py  ika_controllers.launch.py  lidar_centering.launch.py  simple_controllers.launch.py
src/ika_controller/test/: test_ika_controller.py
src/ika_description/: package.xml  setup.cfg  setup.py
src/ika_description/launch/: display.launch.py  gazebo.launch.py
src/ika_description/meshes/: 360_montaj_1.stl  360_motaj_1.stl  360_motaj__1__1.stl  360_motaj__2__1.stl  base_link.stl  lazer_alt_v1_1.stl  lazer_kafa_v1_1.stl  sag_montaj_v1__1__1.stl  sag_on_montaj_v1_1.stl  sol_montaj_1_v81_v1__1__1.stl  sol_on_montaj_v1_1.stl  tekerlek_1.stl  tekerlek_v1_1.stl  tekerlek_v1__1__1.stl  tekerlek_v1__2__1.stl  tekerlek_v1__3__1.stl  tekerlek_v1__4__1.stl
src/ika_description/urdf/: d435_camera.xacro  ika.gazebo  ika.trans  ika.xacro  materials.xacro  rplidar_s2.xacro
src/ika_description/world/: ika_parkur.world
src/ika_mapping/: README.md  package.xml  setup.cfg  setup.py
src/ika_mapping/config/: slam_toolbox.yaml  slam_toolbox_params.yaml
src/ika_mapping/launch/: ika_slam.launch.py  slam.launch.py  tf_setup.launch.py
src/ika_mapping/maps/: map.yaml
src/ika_nav2/: README.md  SENSOR_FUSION_README.md  package.xml  setup.cfg  setup.py
src/ika_nav2/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/ika_nav2/config/: ekf.yaml  nav2_params.yaml  zed2i_no_area.yaml
src/ika_nav2/launch/: sensor_fusion.launch.py  simple_navigation.launch.py  test_sensor_fusion.launch.py
src/ika_nav2/maps/: map.pgm  map.yaml
src/ika_serial_control/: README.md  README_IKA.md  package.xml  setup.cfg  setup.py
src/ika_serial_control/arduino/: ika_arduino_controller.ino
src/ika_serial_control/ika_serial_control/: ika_serial_controller.py
src/ika_serial_control/launch/: ika_control.launch.py
src/model_launcher/: setup.py
src/model_launcher/launch/: model_launch.py
src/model_launcher/model_launcher/: object_detector_node.py
