<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ika_nav2</name>
  <version>0.0.0</version>
  <description>IKA robot için Nav2 tabanlı otonom navigasyon paketi</description>
  <maintainer email="hikmetselcukgunes@gmail.com">gunes</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
